build_security_final.txt
> Task :clean

> Task :compileJava
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:45: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:63: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:80: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:97: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:111: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController
D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:126: error: cannot find symbol
    @PreAuthorize("isAuthenticated()")
     ^
  symbol:   class PreAuthorize
  location: class FileController

> Task :compileJava FAILED
6 errors

[Incubating] Problems report is available at: file:///D:/Startup/Car%20Frontend%20Backend/Sell-the-old-Car/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:45: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:63: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:80: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:97: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:111: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  D:\Startup\Car Frontend Backend\Sell-the-old-Car\src\main\java\com\carselling\oldcar\controller\FileController.java:126: error: cannot find symbol
      @PreAuthorize("isAuthenticated()")
       ^
    symbol:   class PreAuthorize
    location: class FileController
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 12s
2 actionable tasks: 2 executed
